-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
if there are files with PFL layout, it could print the following error logs.
Jul 17 23:45:20 lfs-mds-1-1 kernel: LustreError: 82580:0:(mdt_lv b.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 632 for EA 704 (max_mdsize 1616): rc = -34 Jul 18 02:28:11 lfs-mds-1-1 kernel: LustreError: 194375:0:(mdt_lvb.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 632 for EA 704 (max_mdsize 1616): rc = -34 Jul 18 06:59:39 lfs-mds-1-1 kernel: LustreError: 194376:0:(mdt_lvb.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 632 for EA 704 (max_mdsize 1616): rc = -34 ... Jul 30 23:00:44 lfs-mds-1-1 kernel: LustreError: 180646:0:(mdt_lvb.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 632 for EA 704 (max_mdsize 1616): rc = -34 Aug 1 08:09:38 lfs-mds-1-1 kernel: LustreError: 26242:0:(mdt_lvb.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 632 for EA 704 (max_mdsize 1616): rc = -34 Aug 1 11:58:06 lfs-mds-1-1 kernel: LustreError: 26459:0:(mdt_lvb.c:198:mdt_lvbo_fill()) lfs1-MDT0000: small buffer size 704 for EA 872 (max_mdsize 1616): rc = -34